--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100&family=Manrope:wght@200;300;400;500;600;700;800&display=swap'); */
+
+@layer base {
+  body {
+    font-family: 'IBM Plex Sans', 'Manrope', sans-serif;
+  }
+}
+
+.hero {
+  background: linear-gradient(180deg, rgba(62, 236, 255, 0.2) 0%, rgba(62, 236, 255, 0.0762484) 69.18%, rgba(62, 236, 255, 0) 165.79%);
+}
